--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Calcolo del prezzo dei tuoi chilometri</h1>
     <h2>la tua età è <span id="eta"></span></h2>
     <h2>i tuoi chilometri percorsi sono <span id="km"></span></h2>
+    <h3>costo totale = <span id="costo_lordo"></span> €</h3>
     <script src="main.js"></script>
   </body>
 </html>
